data/derived/fa15/progs/unify/prog3229.ml.out
Characters 264-281:
  (carry, valueToAddToArray@currentSum) in
          ^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
